--- a/C++_primer/Makefile
+++ b/C++_primer/Makefile
@@ -4,7 +4,7 @@
 #
 #
 
-DIRS = 7_chapter 8_chapter 9_chapter 10_chapter
+DIRS = 7_chapter 8_chapter 9_chapter 10_chapter 11_chapter
 
 
 BUILD_DIRS = ${DIRS}
