--- a/C++_primer/11_chapter/Makefile
+++ b/C++_primer/11_chapter/Makefile
@@ -7,7 +7,7 @@ TARGET = erasemap map1 \
                   wcEx word_count word_transform
 
 
-#DIRS_TARGET = 1 3 5 6 9 12 13 14 16 17 21 22 27 28 29 30 33 34
+DIRS_TARGET = 3 7 14 17 22 24 28 31
 
 all:$(TARGET) dir_build obj_clean
 
