--- a/C++_primer/Makefile
+++ b/C++_primer/Makefile
@@ -4,7 +4,10 @@
 #
 #
 
-DIRS =  1_chapter 2_chapter 3_chapter 4_chapter 5_chapter 6_chapter 7_chapter 8_chapter 9_chapter 10_chapter 11_chapter 12_chapter 13_chapter
+DIRS =  2_chapter 2_chapter 3_chapter 4_chapter \
+	5_chapter 6_chapter 7_chapter 8_chapter \
+	9_chapter 10_chapter 11_chapter 12_chapter \
+	13_chapter 14_chapter
 
 
 BUILD_DIRS = ${DIRS}
