--- a/Makefile.inc
+++ b/Makefile.inc
@@ -5,7 +5,7 @@ AR = ar
 LD = ld
 ARFLAGS =
 CFLAGS = -g -Wall -Wextra -pthread
-CXXFLAGS = -g -std=c++11 -Wall -Wextra -pthread
+CXXFLAGS = -g --std=c++0x -Wall -Wextra -pthread
 #CFLAGS = -g  -pthread
 #CXXFLAGS = -g -std=c++11 -pthread
 
